--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ environment:
 
 install:
   - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
-  - pip.exe install conan --upgrade
+  - pip.exe install conan tabulate colorama --upgrade
   - conan user
 
 test_script:
