--- a/.travis.yml
+++ b/.travis.yml
@@ -1,110 +1,16 @@
-linux: &linux
-   os: linux
-   dist: xenial
-   language: python
-   python: "3.7"
-   install:
-     - .ci/travis/install.sh
-   before_script:
-     - conan profile new default --detect
-     - conan profile update settings.compiler.libcxx=libstdc++11 default
-
-osx: &osx
-   os: osx
-   language: generic
-   install:
-     - .ci/travis/install.sh
-   before_script:
-     - eval "$(pyenv init -)"
-     - pyenv activate conan
-
 matrix:
-   include:
-      # All Linux first in parallel
-      - stage: Linux builds
-        name: Getting started
-        <<: *linux
-        env: FOLDER=libraries/poco/md5
-      - name: Conan Workspaces
-        <<: *linux
-        env: FOLDER=features/workspace/cmake
-      - name: Package development flow
-        <<: *linux
-        env: FOLDER=features/package_development_flow
-      - name: Serializing your data with Protobuf
-        <<: *linux
-        env: FOLDER=libraries/protobuf/serialization
-      - name: Using Facebook Folly with Conan
-        <<: *linux
-        env: FOLDER=libraries/folly/basic
-      - name: Introduction to Dear ImGui
-        <<: *linux
-        env: FOLDER=libraries/dear-imgui/basic
-      - name: CMake reuse exported targets multiconfig
-        <<: *linux
-        env: FOLDER=features/cmake/find_package/exported_targets_multiconfig
-      - name: CMake cmake_find_package_multi generator
-        <<: *linux
-        env: FOLDER=features/cmake/find_package/find_cmake_multi_generator_targets
-      - name: Emscripten
-        <<: *linux
-        env: FOLDER=features/emscripten
-      - name: Python requires (reuse conanfile)
-        <<: *linux
-        env: FOLDER=features/python_requires/reuse_conanfile
-      - name: Multi config package (N configs -> 1 package)
-        <<: *linux
-        env: FOLDER=features/multi_config
-      - name: lockfiles/ci
-        <<: *linux
-        env: FOLDER=features/lockfiles/ci
-      - name: Integrate a build-system in Conan
-        <<: *linux
-        env: FOLDER=features/integrate_build_system
+  include:
+    - os: linux
+      dist: xenial
+      language: python
+      python: "3.7"
+    - os: osx
+      language: generic
+      before_script:
+        - eval "$(pyenv init -)"
+        - pyenv activate conan
 
-      # All Macs later
-      - stage: Macos builds
-        name: Getting started
-        <<: *osx
-        env: FOLDER=libraries/poco/md5
-      - name: Conan Workspaces
-        <<: *osx
-        env: FOLDER=features/workspace/cmake
-      - name: Package Development Flow
-        <<: *osx
-        env: FOLDER=features/package_development_flow
-      - name: Serializing your data with Protobuf
-        <<: *osx
-        env: FOLDER=libraries/protobuf/serialization
-      - name: Using Facebook Folly with Conan
-        <<: *osx
-        env: FOLDER=libraries/folly/basic
-      - name: Introduction to Dear ImGui
-        <<: *osx
-        env: FOLDER=libraries/dear-imgui/basic
-      - name: CMake reuse exported targets multiconfig
-        <<: *osx
-        env: FOLDER=features/cmake/find_package/exported_targets_multiconfig
-      - name: CMake cmake_find_package_multi generator
-        <<: *osx
-        env: FOLDER=features/cmake/find_package/find_cmake_multi_generator_targets
-      - name: Emscripten
-        <<: *osx
-        env: FOLDER=features/emscripten
-      - name: Python requires (reuse conanfile)
-        <<: *osx
-        env: FOLDER=features/python_requires/reuse_conanfile
-      - name: Multi config package (N configs -> 1 package)
-        <<: *osx
-        env: FOLDER=features/multi_config
-      - name: lockfile/ci
-        <<: *osx
-        env: FOLDER=features/lockfiles/ci
-      - name: Integrate a build-system in Conan
-        <<: *osx
-        env: FOLDER=features/integrate_build_system
-
+install:
+  - .ci/travis/install.sh
 script:
- - cd "${FOLDER}"
- - chmod +x build.sh
- - ./build.sh
+  - python .ci/run.py
