--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,7 @@ build/*
 tmp/
 features/package_development_flow/test_package/build/*
 features/workspace/build/*
-libraries/protobuf/serialization/build/*
-libraries/folly/basic/build/*
-libraries/poco/md5/build/*
+libraries/**/build/*
 
 # IDE
 .idea/*
