--- a/features/deployment/CMakeLists.txt
+++ b/features/deployment/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.12)
 project(MD5Encrypter)
 
-find_package(poco CONFIG REQUIRED)
+find_package(Poco CONFIG REQUIRED)
 
 add_executable(md5 md5.cpp)
-target_link_libraries(md5 poco::poco)
+target_link_libraries(md5 Poco::Poco)
 
 install(TARGETS md5
     RUNTIME DESTINATION bin
