--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,8 @@ build: false
 
 environment:
     PYTHON: "C:\\Python37"
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    CMAKE_GENERATOR: "Visual Studio 16 2019"
 
 install:
   - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
