--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ build: false
 
 environment:
     PYTHON: "C:\\Python37"
-
+    CONAN_PRINT_RUN_COMMANDS: 1
     matrix:
       - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
         CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
