add dep for ci [skip appveyor]

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ deps =
     conan121: conan>=1.21,<1.22
     conan120: conan>=1.20,<1.21
     coverage: coverage-enable-subprocess
+    tabulate
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
