--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,17 +2,44 @@ build: false
 
 environment:
     PYTHON: "C:\\Python37"
-    CONAN_PRINT_RUN_COMMANDS: 1
+
     matrix:
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-        CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
-      - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-        CMAKE_GENERATOR: "Visual Studio 16 2019"
+        # Conan development
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          PYVER: py38
+          TOXENV: py38-conandev
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          PYVER: py38
+          TOXENV: py38-conandev
+
+        # Conan current version
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          PYVER: py38
+          TOXENV: py38-conancurrent
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          PYVER: py38
+          TOXENV: py38-conancurrent
+
+        # Conan 1.21.x
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          PYVER: py38
+          TOXENV: py38-conan121
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          PYVER: py38
+          TOXENV: py38-conan121
+
+        # Conan 1.20.x
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+          PYVER: py38
+          TOXENV: py38-conan120
+        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+          PYVER: py38
+          TOXENV: py38-conan120
 
 install:
-  - set PATH=%PYTHON%;%PYTHON%/Scripts/;%PATH%
-  - pip.exe install conan tabulate colorama --upgrade
-  - conan user
+  - set PATH=%PATH%;%PYTHON%/Scripts/
+  - python -m pip install --upgrade pip
+  - pip install tox==3.7.0 tox-venv==0.3.1
 
 test_script:
-  - python .ci/run.py
+  - tox
