need to list py38

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
     PYTHONPATH = {toxinidir}{:}{env:PYTHONPATH:}
     CONAN_PRINT_RUN_COMMANDS=1
+    USE_UNSUPPORTED_CONAN_WITH_PYTHON_2=1
 
     coverage: PYTEST_TEST_RUNNER=coverage run -m pytest
     coverage: COVERAGE_PROCESS_START={toxinidir}/.coveragerc
