--- a/tox.ini
+++ b/tox.ini
@@ -16,14 +16,13 @@ setenv =
     PYTHONDONTWRITEBYTECODE=1
     PYTHONPATH = {toxinidir}{:}{env:PYTHONPATH:}
     CONAN_PRINT_RUN_COMMANDS=1
-    USE_UNSUPPORTED_CONAN_WITH_PYTHON_2=1
 
     coverage: PYTEST_TEST_RUNNER=coverage run -m pytest
     coverage: COVERAGE_PROCESS_START={toxinidir}/.coveragerc
     coverage: COVERAGE_FILE={toxinidir}/.coverage
     coverage: PYTESTDJANGO_COVERAGE_SRC={toxinidir}/
 
-passenv = PYTEST_ADDOPTS USE_UNSUPPORTED_CONAN_WITH_PYTHON_2
+passenv = PYTEST_ADDOPTS
 
 commands =
     python .ci/run.py
