Change imgui targets order
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/libraries/dear-imgui/basic/CMakeLists.txt
+++ b/libraries/dear-imgui/basic/CMakeLists.txt
@@ -4,21 +4,22 @@ project(dear-imgui-conan CXX)
 set(CMAKE_PREFIX_PATH ${CMAKE_BINARY_DIR})
 set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 
-# CONFIG option is important so that CMake doesnt search for modules into the default modules directory
-find_package(imgui CONFIG)
-find_package(glfw CONFIG)
-find_package(glew CONFIG)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 
-add_executable( dear-imgui-conan 
-                main.cpp 
+find_package(imgui REQUIRED)
+find_package(glfw REQUIRED)
+find_package(glew REQUIRED)
+
+add_executable( dear-imgui-conan
+                main.cpp
                 opengl_shader.cpp
                 file_manager.cpp
-                opengl_shader.h 
-                file_manager.h 
+                opengl_shader.h
+                file_manager.h
                 bindings/imgui_impl_glfw.cpp
                 bindings/imgui_impl_opengl3.cpp
                 bindings/imgui_impl_glfw.h
-                bindings/imgui_impl_opengl3.h 
+                bindings/imgui_impl_opengl3.h
                 assets/simple-shader.vs
                 assets/simple-shader.fs )
 
@@ -30,4 +31,4 @@ add_custom_command(TARGET dear-imgui-conan
 
 target_compile_definitions(dear-imgui-conan PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)
 
-target_link_libraries(dear-imgui-conan imgui::imgui glfw::glfw glew::glew)
+target_link_libraries(dear-imgui-conan xcb glew::glew imgui::imgui glfw::glfw )
