#43 Fix Linux build order
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/libraries/dear-imgui/basic/CMakeLists.txt
+++ b/libraries/dear-imgui/basic/CMakeLists.txt
@@ -9,16 +9,16 @@ find_package(imgui CONFIG)
 find_package(glfw CONFIG)
 find_package(glew CONFIG)
 
-add_executable( dear-imgui-conan 
-                main.cpp 
+add_executable( dear-imgui-conan
+                main.cpp
                 opengl_shader.cpp
                 file_manager.cpp
-                opengl_shader.h 
-                file_manager.h 
+                opengl_shader.h
+                file_manager.h
                 bindings/imgui_impl_glfw.cpp
                 bindings/imgui_impl_opengl3.cpp
                 bindings/imgui_impl_glfw.h
-                bindings/imgui_impl_opengl3.h 
+                bindings/imgui_impl_opengl3.h
                 assets/simple-shader.vs
                 assets/simple-shader.fs )
 
@@ -29,5 +29,4 @@ add_custom_command(TARGET dear-imgui-conan
 )
 
 target_compile_definitions(dear-imgui-conan PUBLIC IMGUI_IMPL_OPENGL_LOADER_GLEW)
-
-target_link_libraries(dear-imgui-conan imgui::imgui glfw::glfw glew::glew)
+target_link_libraries(dear-imgui-conan imgui::imgui glew::glew glfw::glfw)
