--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,33 +8,41 @@ environment:
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           PYVER: py38
           TOXENV: py38-conandev
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conandev
+          CMAKE_GENERATOR: "Visual Studio 16 2019"
 
         # Conan current version
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           PYVER: py38
           TOXENV: py38-conancurrent
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conancurrent
+          CMAKE_GENERATOR: "Visual Studio 16 2019"
 
         # Conan 1.21.x
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           PYVER: py38
           TOXENV: py38-conan121
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conan121
+          CMAKE_GENERATOR: "Visual Studio 16 2019"
 
         # Conan 1.20.x
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
           PYVER: py38
           TOXENV: py38-conan120
+          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conan120
+          CMAKE_GENERATOR: "Visual Studio 16 2019"
 
 install:
   - set PATH=%PATH%;%PYTHON%/Scripts/
