--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ setenv =
     coverage: COVERAGE_FILE={toxinidir}/.coverage
     coverage: PYTESTDJANGO_COVERAGE_SRC={toxinidir}/
 
-passenv = PYTEST_ADDOPTS CMAKE_GENERATOR USERNAME USERDOMAIN
+passenv = PYTEST_ADDOPTS *
 
 commands =
     python .ci/run.py
