Extend with list (#53)
* extend with list

* less jobs, too much time consuming

* add fast finish

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,6 @@ environment:
 
     matrix:
         # Conan development
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          PYVER: py38
-          TOXENV: py38-conandev
-          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conandev
@@ -25,20 +21,12 @@ environment:
           CMAKE_GENERATOR: "Visual Studio 16 2019"
 
         # Conan 1.21.x
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          PYVER: py38
-          TOXENV: py38-conan121
-          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conan121
           CMAKE_GENERATOR: "Visual Studio 16 2019"
 
         # Conan 1.20.x
-        - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-          PYVER: py38
-          TOXENV: py38-conan120
-          CMAKE_GENERATOR: "Visual Studio 15 2017 Win64"
         - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
           PYVER: py38
           TOXENV: py38-conan120
@@ -51,3 +39,6 @@ install:
 
 test_script:
   - tox
+
+matrix:
+  fast_finish: true
