--- a/libraries/gtest/encryption/test_package/CMakeLists.txt
+++ b/libraries/gtest/encryption/test_package/CMakeLists.txt
@@ -9,6 +9,7 @@ CONAN_BASIC_SETUP()
 ADD_EXECUTABLE(${PROJECT_NAME} encryption_test.cpp)
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CONAN_LIBS})
 SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY ENVIRONMENT "DYLD_LIBRARY_PATH=${GTest_LIB_DIRS}")
 
 # Include Encryptor test #######################################################
 ENABLE_TESTING()
