--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
     conandev: https://github.com/conan-io/conan/archive/develop.tar.gz
     conancurrent: conan
     conanprev: conan-unknown
-    conanprevprev: conan-unknow
+    conanprevprev: conan-unknown
     conan123: conan>=1.23,<1.24
     conan122: conan>=1.22,<1.23
     coverage: coverage-enable-subprocess
