users can add them if needed

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist=True
 envlist =
-    py{27,37,38}-conan{dev,current,123,122}
+    py{27,37,38}-conan{dev,current,prev,prevprev}
 
 [testenv]
 deps =
@@ -9,8 +9,6 @@ deps =
     conancurrent: conan
     conanprev: conan-unknown
     conanprevprev: conan-unknown
-    conan123: conan>=1.23,<1.24
-    conan122: conan>=1.22,<1.23
     coverage: coverage-enable-subprocess
     tabulate
 
