--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
 skipsdist=True
 envlist =
-    py{27,37,38}-conan{dev,latest,123,122}
+    py{27,37,38}-conan{dev,current,prev,prevprev}
 
 [testenv]
 deps =
     conandev: https://github.com/conan-io/conan/archive/develop.tar.gz
     conancurrent: conan
-    conan123: conan>=1.23,<1.24
-    conan122: conan>=1.22,<1.23
+    conanprev: conan-unknown
+    conanprevprev: conan-unknown
     coverage: coverage-enable-subprocess
     tabulate
 
