Fix glfw target name
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/libraries/dear-imgui/basic/CMakeLists.txt
+++ b/libraries/dear-imgui/basic/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_BINARY_DIR})
 
 # CONFIG option is important so that CMake doesnt search for modules into the default modules directory
 find_package(imgui CONFIG)
-find_package(glfw CONFIG)
+find_package(glfw3 CONFIG)
 find_package(glew CONFIG)
 
 add_executable( dear-imgui-conan
