Filter scripts according ci page
Signed-off-by: Uilian Ries <uilianries@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ setenv =
     PYTHONPATH = {toxinidir}{:}{env:PYTHONPATH:}
     CONAN_PRINT_RUN_COMMANDS=1
 
-    coverage: PYTEST_TEST_RUNNER=coverage run -m pytest {posargs}
+    coverage: PYTEST_TEST_RUNNER=coverage run -m pytest
     coverage: COVERAGE_PROCESS_START={toxinidir}/.coveragerc
     coverage: COVERAGE_FILE={toxinidir}/.coverage
     coverage: PYTESTDJANGO_COVERAGE_SRC={toxinidir}/
@@ -25,4 +25,4 @@ setenv =
 passenv = PYTEST_ADDOPTS *
 
 commands =
-    python .ci/run.py
+    python .ci/run.py {posargs}
