--- a/.travis.yml
+++ b/.travis.yml
@@ -4,36 +4,16 @@ jobs:
 
     # Macos is slow, only if everything has passed
     - stage: Macos - All Conan versions
-      name: Conan develop - Python 3.8 (Page 1)
+      name: Conan develop - Python 3.8
       language: generic
       os: osx
-      osx_image: xcode10
-      env: PYVER=py38 TOXENV=py38-conandev CONAN_CURRENT_PAGE=1
-    - name: Conan develop - Python 3.8 (Page 2)
+      osx_image: xcode12
+      env: PYVER=py38 TOXENV=py38-conandev
+    - name: Conan Current - Python 3.8
       language: generic
       os: osx
-      osx_image: xcode10
-      env: PYVER=py38 TOXENV=py38-conandev CONAN_CURRENT_PAGE=2
-    - name: Conan Current - Python 3.5 (Page 1)
-      language: generic
-      os: osx
-      osx_image: xcode10
-      env: PYVER=py35 TOXENV=py35-conancurrent CONAN_CURRENT_PAGE=1
-    - name: Conan Current - Python 3.5 (Page 2)
-      language: generic
-      os: osx
-      osx_image: xcode10
-      env: PYVER=py35 TOXENV=py35-conancurrent CONAN_CURRENT_PAGE=2
-    - name: Conan Current - Python 3.8 (Page 1)
-      language: generic
-      os: osx
-      osx_image: xcode10
-      env: PYVER=py38 TOXENV=py38-conancurrent CONAN_CURRENT_PAGE=1
-    - name: Conan Current - Python 3.8 (Page 2)
-      language: generic
-      os: osx
-      osx_image: xcode10
-      env: PYVER=py38 TOXENV=py38-conancurrent CONAN_CURRENT_PAGE=2
+      osx_image: xcode12
+      env: PYVER=py38 TOXENV=py38-conancurrent
 
     - stage: Linux - Conan develop
       name: Python 3.5
@@ -77,26 +57,10 @@ jobs:
       dist: xenial
 
 
-
-before_install:
-  - ./.ci/travis/before_install.sh
-
 install:
-  - |
-    if [[ "$(uname -s)" == 'Darwin' ]]; then
-      if which pyenv > /dev/null; then eval "$(pyenv init -)"; fi
-      pyenv activate conan;
-      printenv
-      export
-    fi
   - pip install --upgrade pip
   - pip install -r .ci/travis/requirements.txt
 
 script:
-  - |
-    if [[ "$(uname -s)" == 'Darwin' ]]; then
-      if which pyenv > /dev/null; then eval "$(pyenv init -)"; fi
-      pyenv activate conan
-    fi
   - python .ci/last_conan_version.py
   - .ci/travis/build.sh
