--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist=True
 envlist =
-    py{27,37,38}-conan{dev,current,prev,prevprev}
+    py{27,37,38}-conan{current,prev,prevprev}
 
 [testenv]
 deps =
