--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,11 @@
 [tox]
 skipsdist=True
 envlist =
-    py{36,38,39}-conan{current,prev,prevprev}
+    py{36,38,39}-conan{dev,current,prev,prevprev}
 
 [testenv]
 deps =
+    conandev: git+https://github.com/conan-io/conan.git@develop
     conancurrent: conan
     conanprev: conan-unknown
     conanprevprev: conan-unknown
