--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 skipsdist=True
 envlist =
-    py{36,39}-conan{dev,current,prev,prevprev}
+    py{36}-conan{dev,current,prev}
 
 [testenv]
 deps =
