--- a/.ci/jenkins/Jenkinsfile
+++ b/.ci/jenkins/Jenkinsfile
@@ -10,45 +10,50 @@ private Closure runTests(String nodeName) {
     def ret = {
         node(nodeName) {
             stage("${nodeName}") {
-                def scmVars = checkout scm
-                def venvName = "examples_venv"
-                def pipInstalls = 'python -m pip install tox tox-venv requests importlib-metadata && '
-                if (nodeName == 'Linux') {
-                    def dockerImage = 'conanio/ci-functional'
-                    docker.image(dockerImage).inside('--entrypoint=') {
-                        def sourcedir = '/home/conan/'
-                        def pyenvdir = "${sourcedir}.pyenv"
-                        sh(script: "cp -R ./ ${sourcedir}")
-                        sh(script: "chown -R conan ${sourcedir}")
-                        def command = "su - conan -c \"" \
-                                        + "export PYENV_ROOT=${pyenvdir} && " \
-                                        + "export PATH=\"${pyenvdir}/bin:\$PATH\" && " \
-                                        + "pyenv local \$PY36 \$PY38 \$PY39 && " \
-                                        + pipInstalls \
-                                        + "python .ci/last_conan_version.py && " \
-                                        + "python -m tox\""
-                        sh(script: command)
+                try {
+                    cleanWs()
+                    def scmVars = checkout scm
+                    def venvName = "examples_venv"
+                    def pipInstalls = 'python -m pip install tox tox-venv requests importlib-metadata && '
+                    if (nodeName == 'Linux') {
+                        def dockerImage = 'conanio/ci-functional'
+                        docker.image(dockerImage).inside('--entrypoint=') {
+                            def sourcedir = '/home/conan/'
+                            def pyenvdir = "${sourcedir}.pyenv"
+                            sh(script: "cp -R ./ ${sourcedir}")
+                            sh(script: "chown -R conan ${sourcedir}")
+                            def command = "su - conan -c \"" \
+                                            + "export PYENV_ROOT=${pyenvdir} && " \
+                                            + "export PATH=\"${pyenvdir}/bin:\$PATH\" && " \
+                                            + "pyenv local \$PY36 \$PY38 \$PY39 && " \
+                                            + pipInstalls \
+                                            + "python .ci/last_conan_version.py && " \
+                                            + "python -m tox\""
+                            sh(script: command)
+                        }
+                    }
+                    else if (nodeName=='Macos') {
+                        def localDir = '/Users/jenkins'
+                        withEnv(['PY36=3.6.12', 'PY38=3.8.6', 'PY39=3.9.0','TOX_SKIP_ENV=py38.*',
+                                "PYENV_ROOT=${localDir}/.pyenv", "PATH+EXTRA=${localDir}/.pyenv/shims:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"]) {
+                                def pythonLocation = "${localDir}/.pyenv/versions/\$PY36/bin/python"
+                                def configPyenv =  "pyenv local \$PY36 \$PY38 \$PY39 && "
+                                def launchCommand = configPyenv + pipInstalls + "${pythonLocation} .ci/last_conan_version.py && ${pythonLocation} -m tox"
+                                sh(script: launchCommand)
+                        }
+                    }
+                    else if (nodeName=='Windows') {
+                        withEnv(['PY36=Python36', 'PY38=Python38-64', 'CMAKE_GENERATOR=Visual Studio 15 2017 Win64','TOX_SKIP_ENV=py38.*']) {
+                            def pythonVersion = "PY36"
+                            def pythonLocation = "C:/%${pythonVersion}%/python.exe"
+                            def launchCommand = pipInstalls + "${pythonLocation} .ci/last_conan_version.py && ${pythonLocation} -m tox"
+                            bat(script: launchCommand)
+                        }
                     }
                 }
-                else if (nodeName=='Macos') {
-                    def localDir = '/Users/jenkins'
-                    withEnv(['PY36=3.6.12', 'PY38=3.8.6', 'PY39=3.9.0','TOX_SKIP_ENV=py38.*',
-                            "PYENV_ROOT=${localDir}/.pyenv", "PATH+EXTRA=${localDir}/.pyenv/shims:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"]) {
-                            def pythonLocation = "${localDir}/.pyenv/versions/\$PY36/bin/python"
-                            def configPyenv =  "pyenv local \$PY36 \$PY38 \$PY39 && "
-                            def launchCommand = configPyenv + pipInstalls + "${pythonLocation} .ci/last_conan_version.py && ${pythonLocation} -m tox"
-                            sh(script: launchCommand)
-                    }
+                finally {
+                    cleanWs()
                 }
-                else if (nodeName=='Windows') {
-                    withEnv(['PY36=Python36', 'PY38=Python38-64', 'CMAKE_GENERATOR=Visual Studio 15 2017 Win64','TOX_SKIP_ENV=py38.*']) {
-                        def pythonVersion = "PY36"
-                        def pythonLocation = "C:/%${pythonVersion}%/python.exe"
-                        def launchCommand = pipInstalls + "${pythonLocation} .ci/last_conan_version.py && ${pythonLocation} -m tox"
-                        bat(script: launchCommand)
-                    }
-                }
-                cleanWs()
             }
         }
     }
