--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,7 @@ deps =
 setenv =
     PYTHONDONTWRITEBYTECODE=1
     PYTHONPATH = {toxinidir}{:}{env:PYTHONPATH:}
+    CONAN_PRINT_RUN_COMMANDS=1
 
     coverage: PYTEST_TEST_RUNNER=coverage run -m pytest
     coverage: COVERAGE_PROCESS_START={toxinidir}/.coveragerc
